[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/Menu.gd" id=1]
[ext_resource type="Script" path="res://scripts/Settings.gd" id=2]

[node name="Menu" type="Control"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(1)

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -320.0
offset_top = -360.0
offset_right = 320.0
offset_bottom = 360.0

[node name="Title" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 24.0
offset_right = -16.0
offset_bottom = 80.0
text = "Top-Down Drift"
horizontal_alignment = 1

[node name="BestLabel" type="Label" parent="Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
offset_left = 16.0
offset_top = 84.0
offset_right = -16.0
offset_bottom = 128.0
text = "Best: 0.0 km / 0.0 s"
horizontal_alignment = 1

[node name="StartButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 160.0
offset_right = 150.0
offset_bottom = 220.0
text = "Start Run"

[node name="SettingsButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 240.0
offset_right = 150.0
offset_bottom = 300.0
text = "Settings"

[node name="QuitButton" type="Button" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
offset_left = -150.0
offset_top = 320.0
offset_right = 150.0
offset_bottom = 380.0
text = "Quit"

[node name="SettingsPanel" type="Control" parent="."]
visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource(2)

[node name="Panel" type="Panel" parent="SettingsPanel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -220.0
offset_top = -200.0
offset_right = 220.0
offset_bottom = 200.0

[node name="VBox" type="VBoxContainer" parent="SettingsPanel/Panel"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 24.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = -24.0

[node name="Title" type="Label" parent="SettingsPanel/Panel/VBox"]
text = "Settings"
horizontal_alignment = 1

[node name="AudioToggle" type="CheckButton" parent="SettingsPanel/Panel/VBox"]
text = "Audio"

[node name="SfxToggle" type="CheckButton" parent="SettingsPanel/Panel/VBox"]
text = "SFX"

[node name="CloseButton" type="Button" parent="SettingsPanel/Panel/VBox"]
text = "Close"
